// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media-tree ancestors should get ancestor items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "createDate": "NORMALIZED_DATE",
        "flags": [
          {
            "alias": "Umb.HasCollection",
          },
        ],
        "hasChildren": true,
        "id": "00000000-0000-0000-0000-000000000000",
        "isTrashed": false,
        "mediaType": {
          "collection": {
            "id": "3a0156c4-3b8c-4803-bdc1-6871faa83fff",
          },
          "icon": "icon-folder",
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "noAccess": false,
        "parent": null,
        "variants": [
          {
            "culture": null,
            "name": "_Test Root Media",
          },
        ],
      },
      {
        "createDate": "NORMALIZED_DATE",
        "flags": [],
        "hasChildren": false,
        "id": "00000000-0000-0000-0000-000000000000",
        "isTrashed": false,
        "mediaType": {
          "collection": null,
          "icon": "icon-picture",
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "noAccess": false,
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "variants": [
          {
            "culture": null,
            "name": "_Test Child Media",
          },
        ],
      },
    ],
  },
}
`;

exports[`media-tree ancestors should handle non-existent item 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;

exports[`media-tree children should get child items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "createDate": "NORMALIZED_DATE",
        "flags": [],
        "hasChildren": false,
        "id": "00000000-0000-0000-0000-000000000000",
        "isTrashed": false,
        "mediaType": {
          "collection": null,
          "icon": "icon-picture",
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "noAccess": false,
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "variants": [
          {
            "culture": null,
            "name": "_Test Child Media",
          },
        ],
      },
    ],
    "total": 1,
  },
}
`;

exports[`media-tree children should handle non-existent parent 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "total": 0,
  },
}
`;
